style: Fix the wrap from page

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -4,14 +4,17 @@
 
 .my-card
     margin: 10px
+    width: 300px
+    @media screen and (min-width: 600px)
+        width: 500px
 
 .q-img__content > div
-    position: absolute;
-    padding: 16px;
-    color: #fff;
-    background: rgba(0,0,0,0.70);
+    position: absolute
+    padding: 16px
+    color: #fff
+    background: rgba(0,0,0,0.70)
 
 .q-card__actions
-    padding: 18px;
-    align-items: center;
+    padding: 18px
+    align-items: center
     background-color: #2e2d2e
